225 ==> 376124 - Some Photos are not previewed.
226 ==> 386188 - Preview Does Not Display Some JPGs Editor Crashes Program.
227 ==> 394906 - Toggling "use file metadata" for input will make Digikam forget all imported photos.
228 ==> 388391 - Windows x64 installer crashes at 60%.
229 ==> 377433 - Crash on opening settings.
230 ==> 390286 - Please update version of lensfun.
231 ==> 386649 - Crash on opening RAW file from OnePlus One.
232 ==> 172836 - No menu item for lensfun.
233 ==> 319462 - Crash while applying lensfun distortion correction a second time.
234 ==> 380844 - Demosaicing choosing VCD & AHD then update.
235 ==> 380843 - Demosaicing.
236 ==> 301219 - digiKam crash.
237 ==> 216013 - try to open extras/ batch raw converter was followed by a crash.
238 ==> 102045 - RAW conversion in digikam fails to convert or generate preview.
239 ==> 137281 - Cannot convert nef into raw.
240 ==> 230763 - Exif ISO data missing when converting Olympus ORF.
241 ==> 137278 - 16-bit/channel workspace when working with RAW conversions.
242 ==> 133004 - Canon CRW portrait preview upside-down.
243 ==> 221345 - Do not process search immediately when enter text to query.
244 ==> 396234 - Add a feature which allow to switch latitude and longitude.
245 ==> 396283 - Missing images in album preview.
246 ==> 396352 - Some iptc tags are not displayed in the metadata part.
247 ==> 396434 - Uncontrolled log messages oversize log file up to run out of disk space.
248 ==> 396482 - Empty folder selector window after select and click on "Import selected elements".
249 ==> 396170 - Gallery creation error.
250 ==> 140374 - HTML Gallery export fails to parse xml from non-UTF8 metadata in jpeg.
251 ==> 396712 - "Save Search" does not work.
252 ==> 396944 - Integrity constraint violation on Albums.icons when migrating from sqlite to mysql.
253 ==> 396952 - Cut and Paste Into Caption Has Incorrect Font Initially.
254 ==> 